# fledge-plugin-standup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plugin.toml
.github/workflows/: release.yml
docs/: index.html
src/: main.rs
